likedfood 기능 구현 1차 완료 / 인덱스 정리

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -306,7 +306,7 @@
                 </div>
             </div>
         </section>
-        <div id="foodList" style="width:65%; margin:auto; height: 1400px;">
+        <div id="foodList" class="foodCardList">
         </div>
 
     </main>
