--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,6 +21,7 @@
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 
     <!--파비콘-->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon2.ico"/>
@@ -78,7 +79,7 @@
                                     let class_heart = response == true ? "bi-heart-fill" : "bi-heart"
                                     let temp = `
                                                 <div id="${foodList['id']}" class="foodListCard">
-                                                    <div class="foodImage" style='background-image:url("${foodList['imageUrl']}")' ;></div>
+                                                    <div class="foodImage" style='background-image:url("${foodList['imageUrl']}")'></div>
                                                     <div class="foodInfo">
                                                         <p class="foodListCardName">${foodList['name']}</p>
                                                         <i id="heart${foodList['id']}" class="bi ${class_heart}" onclick="heart('${foodList['id']}')"></i><span class="likedLength">${foodList['likedFood'].length}</span>
@@ -91,6 +92,7 @@
                                     Tag(foodList);
                                 }
                             })
+
                         }
                     }
                 })
@@ -111,7 +113,7 @@
                             console.log(foodList['id']);
                             let temp = `
                                 <div id="${foodList['id']}"  class="foodListCard">
-                                    <div class="foodImage" style='background-image:url("${foodList['imageUrl']}")' ;></div>
+                                    <div class="foodImage" style='background-image:url("${foodList['imageUrl']}")'></div>
                                     <div class="foodInfo">
                                         <p class="foodListCardName">${foodList['name']}</p>
                                         <i class="bi bi-heart" id="heart" onclick="alert('로그인후 이용해주세요')"></i><span class="likedLength">${foodList['likedFood'].length}</span>
@@ -141,7 +143,7 @@
         })
 
         function Tag(foodList) {
-            for (let i = 0; i < foodList['tags'].length; i++) {
+            for (let i = 0; i < foodList.length; i++) {
                 let tags = foodList['tags'][i]
                 let tag = tags['tagName']
                 if (tag === "korean") {
@@ -215,6 +217,125 @@
                 })
             }
         }
+
+        function is_nickname(asValue) {
+            var regExp = /^(?=.*[a-zA-Z])[-a-zA-Z0-9_.]{2,10}$/;
+            return regExp.test(asValue);
+        }
+
+        function is_password(asValue) {
+            var regExp = /^(?=.*\d)(?=.*[a-zA-Z])[0-9a-zA-Z!@#$%^&*]{8,20}$/;
+            return regExp.test(asValue);
+        }
+
+        function onclickAdmin() {
+            // Get the checkbox
+            var checkBox = document.getElementById("admin-check");
+            // Get the output text
+            var box = document.getElementById("admin-token");
+
+            // If the checkbox is checked, display the output text
+            if (checkBox.checked == true){
+                box.style.display = "block";
+            } else {
+                box.style.display = "none";
+            }
+        }
+
+        function signup() {
+            let password= $("#password").val();
+
+            if ($("#loginusername").hasClass("is-danger")) {
+                alert("아이디를 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-id").hasClass("is-success")) {
+                alert("아이디 중복확인을 해주세요.")
+                return;
+            }
+
+            if (password == "") {
+                $("#help-password").text("  비밀번호를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#password").focus()
+                return;
+            } else if (!is_password(password)) {
+                $("#help-password").text("  비밀번호의 형식을 확인해주세요. 영문과 숫자 필수 포함, 특수문자(!@#$%^&*) 사용가능 8-20자").removeClass("is-safe").addClass("is-danger")
+                $("#password").focus()
+                return
+            } else {
+                $("#help-password").text("  사용할 수 있는 비밀번호입니다.").removeClass("is-danger").addClass("is-success")
+            }
+            let info = {
+                username: $("#loginusername").val(),
+                password: $("#password").val(),
+                email: $("#email").val()
+            }
+            $.ajax({
+                type: 'POST',
+                url: `/signup`,
+                contentType: "application/json",
+                data: JSON.stringify(info),
+                success: function (response) {
+                    alert("회원가입이 완료되었습니다!!");
+                    //화면 라우터
+                    location.href = '/';
+                }
+            })
+        }
+
+        function idCheck() {
+            let username = $("#loginusername").val()
+            console.log(username)
+            if (username == "") {
+                $("#help-id").text("아이디를 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#loginusername").focus()
+                return;
+            }
+            if (!is_nickname(username)) {
+                $("#help-id").text("아이디의 형식을 확인해주세요. 영문과 숫자, 2-10자 길이").removeClass("is-safe").addClass("is-danger")
+                $("#loginusername").focus()
+                return;
+            }
+            let info = { "username" : $("#loginusername").val()};
+            $.ajax({
+                type: "POST",
+                url: `/signup/idcheck`,
+                contentType: "application/json",
+                data: JSON.stringify(info),
+                success: function (response) {
+                    if (response == true) {
+                        alert("아이디 중복")
+                        $(".help-id").text("  이미 존재하는 아이디입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#loginusername").focus()
+                    }
+                    else {
+
+                        $(".help-id").text("  사용할 수 있는 아이디입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                }
+            });
+        }
+
+        Kakao.init('f9347e09eab96301ef9d210086833557');
+        function lok() {
+            Kakao.Auth.login({
+                success: function(authObj) {
+                    $.ajax({
+                        type: 'POST',
+                        url: `/login/kakao`,
+                        contentType: "application/json",
+                        data: JSON.stringify({'token':authObj['access_token']}),
+                        success: function (response) {
+                            localStorage.setItem("token", response['token']);
+                            localStorage.setItem("username", response['username']);
+                            location.href = '/';
+                        }
+                    })
+                },
+                fail: function(err) {
+                    alert(JSON.stringify(err))
+                },
+            })
+        }
     </script>
 
 </head>
@@ -233,9 +354,10 @@
                     <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
                 </div>
                 <div class="nav-botton-box">
-                    <button class="nav-button" onclick="window.location.href = '/login.html'" id="login">로그인</button>
+                    <button class="nav-button" data-bs-toggle="modal" data-bs-target="#LoginModal" id="login" >로그인</button>
                     <button class="nav-button" id="logout">로그아웃</button>
                     <button class="nav-button" onclick="window.location.href = '/mypage.html'" id="mypage">마이페이지
+
                     </button>
                 </div>
             </div>
@@ -249,45 +371,56 @@
                 <div class="modal-content rounded-5 shadow">
                     <div class="modal-header p-5 pb-4 border-bottom-0">
                         <!-- <h5 class="modal-title">Modal title</h5> -->
-                        <h2 class="fw-bold mb-0">Sign up for free</h2>
+                        <h2 class="fw-bold mb-0">회원가입</h2>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
 
                     <div class="modal-body p-5 pt-0">
-                        <form class="">
+
                             <div class="form-floating mb-3">
-                                <input type="email" class="form-control rounded-4" id="floatingInput"
-                                       placeholder="name@example.com">
-                                <label for="floatingInput">Email address</label>
+                                <input type="text" class="form-control rounded-4" id="loginusername"
+                                       placeholder="아이디">
+                                <label for="loginusername">아이디</label>
                             </div>
+                        <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" onclick="idCheck()">
+                            아이디 중복확인
+                        </button>
+                        <div class="text-muted help help-id" id="help-id">&nbsp;&nbsp;영문과 숫자 사용 가능. 2-10자 길이<br/></div>
                             <div class="form-floating mb-3">
-                                <input type="password" class="form-control rounded-4" id="floatingPassword"
-                                       placeholder="Password">
-                                <label for="floatingPassword">Password</label>
+                                <input type="password" class="form-control rounded-4" id="password"
+                                       placeholder="비밀번호">
+                                <label for="password">비밀번호</label>
+
                             </div>
-                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
-                            <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                        <div class="text-muted help help-password" id="help-password">&nbsp;&nbsp;영문과 숫자 필수 포함, 8-20자<br/></div>
+<!--                        <div class="form-floating mb-3">-->
+<!--                            <input type="password" class="form-control rounded-4" id="password2"-->
+<!--                                   placeholder="비밀번호">-->
+<!--                            <label for="password2">비밀번호</label>-->
+
+<!--                        </div>-->
+<!--                        <div class="help help-password" id="help-password2">&nbsp;&nbsp;비밀번호를 다시 입력해주세요.<br/></div>-->
+
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control rounded-4" id="email"
+                                       placeholder="이메일">
+                                <label for="email">이메일</label>
+                            </div>
+                            <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" onclick="signup()">회원가입하기</button>
+                            <small class="text-muted">회원가입하시면 정보 제공에 동의하시는겁니다.</small>
                             <hr class="my-4">
-                            <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
-                            <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" type="submit">
-                                <svg class="bi me-1" width="16" height="16">
-                                    <use xlink:href="#twitter"/>
-                                </svg>
-                                Sign up with Twitter
+                            <h2 class="fs-5 fw-bold mb-3"></h2>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-4" onclick="lok()">
+                                카카오 회원가입하기
                             </button>
                             <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-4" type="submit">
                                 <svg class="bi me-1" width="16" height="16">
                                     <use xlink:href="#facebook"/>
                                 </svg>
-                                Sign up with Facebook
+                                로그인
                             </button>
-                            <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-4" type="submit">
-                                <svg class="bi me-1" width="16" height="16">
-                                    <use xlink:href="#github"/>
-                                </svg>
-                                Sign up with GitHub
-                            </button>
-                        </form>
+
+
                     </div>
                 </div>
             </div>
