--- a/src/main/resources/static/kakao.html
+++ b/src/main/resources/static/kakao.html
@@ -77,6 +77,7 @@
         #pagination .on {font-weight: bold; cursor: default;color:#777;}
     </style>
 </head>
+
 <body>
 <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
@@ -97,8 +98,8 @@
             <div>
                 <form onsubmit="searchPlaces(); return false;">
 <!--                    키워드 밸류값이 들어가야 하는 부분-->
-                    키워드 : <input type="text" value="제주도" id="keyword" size="15">
-                    <button type="submit">검색하기</button>
+                    키워드 : <input type="text" value="서울시청 맛집" id="keyword" size="15">
+                    <button type="submit" onclick="getCurrentPosBtn()">검색하기</button>
                 </form>
             </div>
         </div>
@@ -125,24 +126,35 @@
             <a href="https://github.com/bestmealever">이거사조</a>. <br>
             이거사조 is Team 4 in 내일배움캠프. <br>
             Welcome to <a href="https://spartacodingclub.kr/">스파르타코딩클럽</a>.
-        </p>
+        </p>sd
     </div>
 </footer>
 
 <script> // 로직이 짜여지는 script part
 
+
+// // 현재 위치를 받아오는 함수 생성
+// function locationLoadSuccess(pos) {
+//     // 현재 위치 받아오기
+//     let currentPos = new kakao.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
+//
+//     // 지도 이동(기존 위치와 가깝다면 부드럽게 이동)
+//     map.panTo(currentPos);
+//
+//     //
+// }
+//
+// function locationLoadError(pos) {
+//     alert('위치 정보를 가져오는데 실패했습니다.');
+// }
+//
+// function getCurrentPosBtn() {
+//     navigator.geolocation.getCurrentPosition(locationLoadSuccess, locationLoadError)
+// }
+
+
 // 장소 검색 객체를 생성합니다.
 let ps = new kakao.maps.services.Places();
-
-// // 지도 중심 위치를 변경시킵니다.
-// function panTo() {
-//     // 이동할 위도 경도 위치를 생성합니다
-//     let moveLatLon = new kakao.maps.LatLng(33.450580, 126.574942); // 변경할 중심좌표 설정해주어야 함. (Geolocation API 활용 예정)
-//
-//     // 지도 중심을 부드럽게 이동시킵니다
-//     // 만약 이동할 거리가 지도 화면보다 크면 부드러운 효과 없이 이동합니다
-//     map.panTo(moveLatLon);
-// }
 
 // 일반 지도와 스카이뷰로 지도 타입을 전환할 수 있는 지도타입 컨트롤을 생성합니다
 let mapTypeControl = new kakao.maps.MapTypeControl();
@@ -240,7 +252,7 @@ function displayPlaces(places) {
             kakao.maps.event.addListener(marker, 'mouseout', function() {
                 infowindow.close();
             });
-
+s
             itemEl.onmouseover =  function () {
                 displayInfowindow(marker, title);
             };
