중복체크 추가

--- a/src/main/resources/static/posting.html
+++ b/src/main/resources/static/posting.html
@@ -76,12 +76,13 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a class="button log-in is-primary">
-                            <strong>로그인</strong>
-                        </a>
-                        <a class="button is-light">
-                            아무 버튼
-                        </a>
+<!--                        <a class="button log-in is-primary">-->
+<!--                            <strong>로그인</strong>-->
+<!--                        </a>-->
+                        <div class="nav-botton-box">
+                            <button class="nav-button" id="logout">로그아웃</button>
+                        </div>
+
                     </div>
                 </div>
             </div>
