--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -124,6 +124,8 @@
                         }
                     }
                 })
+                //추천하기 접근 불가
+
             }
             $("#logout").click(function () {
                 //로그아웃
@@ -215,6 +217,17 @@
                 })
             }
         }
+
+        function toposting() {
+            //login 시에는 alert,
+            //아닐 경우에는 '/posting'
+                if (localStorage.getItem("token") == null) {
+                    alert('앗, 로그인한 유저만 이용 가능합니다')
+                    location.href = '/';
+                } else {
+                    location.href = '/posting.html';
+                }
+            }
     </script>
 
 </head>
@@ -307,7 +320,8 @@
 <!--                                data-bs-target="#SignupPlzModal"-->
 <!--                                onclick="">추천하기-->
 <!--                        </button>-->
-                        <button class="main-button" onclick="window.location.href ='/posting.html'">추천하기</button>
+                        <button class="main-button" onclick="toposting()">추천하기</button>
+<!--                        <button class="main-button" onclick="window.location.href ='/posting.html'">추천하기</button>-->
                         <button class="main-button" onclick="window.location.href ='/recommend.html'">추천받기</button>
                     </div>
                 </div>
