도와줘요 영호맨!

--- a/src/main/resources/static/recommend.html
+++ b/src/main/resources/static/recommend.html
@@ -42,7 +42,7 @@
 <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
+            <a href="/" class="navbar-brand d-flex align-items-center">
                 <strong>오늘 뭐 먹지?</strong>
             </a>
         </div>
