--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -405,7 +405,7 @@
             <div class="nav-container">
                 <div class="nav-title-box">
 
-                    <a href="#" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
+                    <a href="/" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
                     <a href="/" class="nave-menu-text nav-menu">뭐먹을지 추천받기</a>
                     <a href="/" class="nave-menu-text nav-menu">맛있는거 추천받기</a>
                     <a href="/" class="nave-menu-text nav-menu">이세상 음식 전부보기</a>
