--- a/src/main/resources/static/kakao.html
+++ b/src/main/resources/static/kakao.html
@@ -227,7 +227,7 @@
 <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
-            <a href="#" class="navbar-brand d-flex align-items-center">
+            <a href="/" class="navbar-brand d-flex align-items-center">
                 <strong>오늘 뭐 먹지?</strong>
             </a>
         </div>
@@ -297,7 +297,7 @@ $(document).ready(function () {
     keyword = decodeURI(getParam('foodName'));
     console.log(keyword)
     keywordSearch()
-    keywordSearch()
+    getCurrentPosBtn()
 });
 
 function getParam(name) {
