--- a/src/main/resources/static/mypage.html
+++ b/src/main/resources/static/mypage.html
@@ -11,8 +11,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/mycss.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/mycss.css" rel="stylesheet">
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -300,7 +300,7 @@
             <div class="nav-container">
                 <div class="nav-title-box">
 
-                    <a href="#" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
+                    <a href="/" class="title nav-text" style="padding-top: 5px;">오늘 뭐 먹지?</a>
                     <a href="/" class="nave-menu-text nav-menu">뭐먹을지 추천받기</a>
                     <a href="/" class="nave-menu-text nav-menu">맛있는거 추천받기</a>
                 </div>
